Add inventories api controller and update http client
